# BankSystem

./: .gitignore  CHANGES.md  CMakeLists.txt  FEATURES.md  README.md  bank.db  generate_protos.sh  main.cpp  패턴을적용해보자.md
BankSystem/: account.cc  account.h  atm.cc  atm.h  common_optino.h  customer.cc  customer.h
docs/: database_refactoring.md
protos/: account.proto  bank.proto  customer.proto  protoStyle.md
protos/FileSystem/: account.proto  file.proto
protos/Server/: bank.proto
src/: CMakeLists.txt  config.h.in  main.cpp
src/BankSystem/: account.cc  account.h  atm.cc  atm.h  atm2.cc  common_option.h  customer.cc  customer.h
src/Client/: CMakeLists.txt  main.cc
src/Client/BankSystem/: atm.cc
src/FileSystem/: CMakeLists.txt  README.md
src/FileSystem/controller/: account_file_info_controller.h  filepath_controller.h
src/FileSystem/db/: TableTree  file_system_database.h
src/FileSystem/db/core/: database.cc  database.h
src/FileSystem/db/tables/: account_file_info.cc  account_file_info.h
src/FileSystem/grpcService/: fileSystemManagerImpl.cc  fileSystemManagerImpl.h
src/FileSystem/main/: main.cc  services.cc  services.h
src/Server/: CMakeLists.txt  main.cpp  services.cc  services.h
src/Server/common/: myUtil.h
src/Server/controller/: account_controller.cc  account_controller.h  customer_controller.cc  customer_controller.h  transaction_controller.cc  transaction_controller.h
src/Server/db/: tableTree
src/Server/db/bank/: bank_database.h  tables.h
src/Server/db/bank/controller/: account_controller.cc  account_controller.h  customer_controller.cc  customer_controller.h  transaction_controller.cc  transaction_controller.h
src/Server/db/bank/models/: accountdb.cc  accountdb.h  customerdb.cc  customerdb.h  fixedDeposit.h  savings.h  transaction_logdb.h
src/Server/db/bank/tables/: accountdb.cc  accountdb.h  customerdb.cc  customerdb.h  fixedDeposit.cc  fixedDeposit.h  fixedDepositdb.cc  fixedDepositdb.h  savings.cc  savings.h  savingsdb.cc  savingsdb.h  transaction_logdb.cc  transaction_logdb.h
src/Server/db/bank/utils/: get_current_time.h
src/Server/db/core/: database.h
src/Server/grpcService/: bankManagerImpl.cc  bankManagerImpl.h
src/Server/main/: main.cc
src/Server/models/Account/: account.h  account_namepsace.h  account_namespace.h
src/Server/models/Account/Savings/: savings.h
src/Server/models/Account/Savings/FixedDeposit/: fixed_deposit.h
src/Server/models/Account/Savings/NormalSavings/: normal_savings.h
src/Server/models/Customer/: customer.h  customer_namespace.h
src/Server/models/Log/: log.h  log_namespace.h  logging.h  logging_namespace.h
src/Server/models/Log/Transaction/: transaction.h
src/Server/models/Log/Transaction/Deposit/: deposit_log.h
src/Server/models/Log/Transaction/Transfer/: transfer_log.h
src/Server/models/Log/Transaction/Withdraw/: withdraw_log.h
src/Test/: CMakeLists.txt
src/Test/Server/: CMakeLists.txt  test_example.cpp  test_rpc.cpp
src/client-web/: build.gradle  settings.gradle
src/client-web/frontend/: package-lock.json  package.json
src/client-web/frontend/src/: App.jsx  setProxy.js
src/client-web/frontend/src/components/Account/: AccountList.css  AccountList.jsx  CreateFixedDepositAccount.css  CreateFixedDepositAccount.jsx
src/client-web/frontend/src/components/Dashboard/: Dashboard.css  Dashboard.jsx
src/client-web/frontend/src/components/Login/: Login.css  Login.jsx
src/client-web/src/main/java/com/example/client_web/: ClientWebApplication.java
src/client-web/src/main/java/com/example/client_web/controller/: AccountController.java  HelloWorldController.java  HomeController.java  UserController.java
src/client-web/src/main/java/com/example/client_web/dto/: CreateFixedDepositAccountRequest.java  LoginRequest.java
src/client-web/src/main/java/com/example/client_web/grpc/: GrpcClientService.java
src/client-web/src/main/java/com/example/client_web/service/: UserService.java
src/client-web/src/main/resources/: application.properties
src/client-web/src/main/resources/templates/: deposit.html  home.html
src/client-web/src/test/java/com/example/client_web/: ClientWebApplicationTests.java
src/common/: myUtil.h
src/db/bank/: bank_database.h
src/db/bank/models/: account.h  accountdb.cc  accountdb.h  customer.h  customerdb.cc  customerdb.h  transaction_log.h  transaction_logdb.h
src/db/bank/utils/: get_current_time.h
src/db/core/: database.cc
src/util/: connectdb.h
회의록/: 1차(250117).md  2차(250121).md  3차(250127).md  4차(250205).md  5차(250217).md  6차(250225).md  7차(250301).md
